<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="name">Name</string>
    <string name="order">Phone Number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_name">Jerim Kaura</string>
    <string name="phone_number">07122345467</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>