<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SingleContactFragment">

    <TextView
        android:id="@+id/text_view_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/extra_bold"
        android:text="@string/contact_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_contact_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/medium"
        android:text="@string/phone_number"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBottom_toTopOf="@+id/name_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_contact_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle_icon"
        android:fontFamily="@font/extra_bold"
        android:gravity="center"
        android:src="@drawable/singer"
        android:text="JK"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_contact_phone_number" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/medium"
            android:text="@string/update"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/medium"
            android:text="@string/delete"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:textColor="@color/white"
            app:backgroundTint="#C54040" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>